--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,5 @@
 set -g default-command "reattach-to-user-namespace -l /bin/bash"
+
+# fix ssh agent, ~/.ssh/rc should symlink from ~/.ssh/ssh_auth_sock to SSH_AUTH_SOCK at the
+# start of each connection
+setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
