1 fix issue preventing tmux from working on non-OS X

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
-set -g default-command "reattach-to-user-namespace -l /bin/bash"
+if-shell -b "which reattach-to-user-namespace" "set -g default-command 'reattach-to-user-namespace -l /bin/bash'"
 
 # fix ssh agent, ~/.ssh/rc should symlink from ~/.ssh/ssh_auth_sock to SSH_AUTH_SOCK at the
 # start of each connection
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
+
+set -g update-environment -r
