Make tmux use custom shell
I want tmux sessions to use the newer Bash shell I have linked from
/usr/local/bin/bash, not the one that ships with Mac OS to /bin/bash,
because the latter is an old version due to licensing issues.

https://superuser.com/questions/253786/how-can-i-make-tmux-use-my-default-shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,5 @@ if-shell -b "which reattach-to-user-namespace" "set -g default-command 'reattach
 setenv -g SSH_AUTH_SOCK $HOME/.ssh/ssh_auth_sock
 
 set -g update-environment -r
+
+set-option -g default-shell /usr/local/bin/bash
