Use a safer name for put_last_in_path
gh-9

My last build failed on Ubuntu in CI with:

./put-last-in-path.test.sh: line 3: unset: `put-last-in-path': not a
valid identifier

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Test
         run: |
-          ./put-last-in-path.test.sh
+          ./put_last_in_path.test.sh
           ./dedup_awk.test.sh
